--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "axios": "^1.1.2",
+        "axios": "^1.5.0",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
@@ -15,7 +15,7 @@
     },
     "dependencies": {
         "datatables.net-bs5": "^1.13.6",
-        "jQuery": "^1.7.4",
+        "jquery": "^3.7.1",
         "sweetalert2": "^11.7.27"
     }
 }
